styles/index.css
/* ... */
#main-navigation[data-visible="true"] {
    transform: translateX(0%);
}

/* Hero */

.intro h1 {
    margin: 0;
    line-height: 1;
}

.cta-hero {
    padding: 1rem 2rem;
    color: hsl(var(--clr-white));
    text-decoration: none;
    cursor: pointer;
    background-color: transparent;
    border: 2px solid hsl(var(--clr-white)/ 20%);
    border-radius: 10px;
    transition: background-color 500ms ease-in-out;
}

.cta-hero::after {
    display: inline-block;
    height: 20px;
    aspect-ratio: 1;
    margin-left: 1rem;
    vertical-align: middle;
    content: '';
    background-image: url("../assets/icons/arrow-right.svg");
    filter: invert(var(--cta-hero-invert, 100%));
    background-repeat: no-repeat;
    background-size: contain;
}


.cta-hero:hover {
    color: hsl(var(--clr-dark));
    background-color: hsl(var(--clr-white));

    --cta-hero-invert: 0%;
}

/* slider */

.slider-container {
    position: relative;
    width: 98vw;
    padding: 4rem 0;
    margin-inline: auto;
    overflow: hidden;
    background-color: hsl(var(--clr-gray));
    transition: filter 500ms ease-in-out;
}

.slider {
    display: flex;
    gap: 25vw;
    height: 100px;
    transition: animation 200ms linear infinite;
    animation: slider-scroll 15s linear infinite;
}

.slide {
    width: 250px;
    transition: animation 200ms ease-in-out;
}

.slide img {
    max-width: unset;
    height: 100%;
    transition: transform 100ms ease-in-out;
}

.slide img:hover {
    transform: scale(1.25);
}

.slider-text-wrapper {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100px;
    animation: slider-text-opacity 15s linear infinite;
    
}

.slider-text-wrapper p::before {
    position: absolute;
    width: calc(100% + 2em);
    height: 100%;
    content: "";
    background-color: hsl(var(--clr-gray));
    animation: slider-text-reveal 15s infinite linear;
    
}

.slider-text {
    margin: 0;
    color: hsl(var(--clr-white) / 90%);
}

@keyframes slider-scroll {
    0% {
        transform: translateX(0%);
    }

    70% {
        opacity: 1;
        transform: translateX(var(--slider-scroll-translation, -80%));
    }

    75%, 100% {
        opacity: 0;
    }
}

@keyframes slider-text-reveal {
    0% {
        opacity: 0;
    }

    70%, 75% {
        opacity: 1;
        transform: translate(0);
    }

    95% {
        opacity: 1;
    }

    100% {
        opacity: 0;
        transform: translate(80%);
    }
}

@keyframes slider-text-opacity {
    0%, 70% {
        opacity: 0;
    }

    75% {
        opacity: 0.9;
        transform: scale(1.2);
    }

    95% {
        opacity: 0.9;
        transform: scale(1.1);
    }

    100% {
        opacity: 0;
        transform: scale(1);
    }
}

/* clients */

.clients {
    padding: 2rem 0;
    text-align: center;
    background-color: hsl(var(--clr-gray));
}


/* layout  */

.grid-container {
    display: grid;
    place-items: center;
    padding-inline: clamp(1.25rem, 7vw, 6rem);
    text-align: center;
}

.grid-container--hero {
    grid-template-areas:
        '. '
        'content'
        'image'
}

.grid-container--hero>.intro {
    grid-area: content;
}

.grid-container--hero>picture {
    grid-area: image;
    align-self: end;
}

/* about me */

.numbered-data {
    justify-content: space-around;
}

.about-me {
    display: flex;
    flex-direction: column;
    padding-inline: clamp(1.25rem, 7vw, 10rem);
    margin: 10rem 0;
    text-align: center;
}

.about-me-title {
    width: 100%;
    margin:3rem 0;
}

.about-me-content {
    align-self: end;
    width: 100%;
    padding-inline: 1rem;
    margin: 3rem 0;
}

.about-me-content .numbered-data{
    flex-direction: column;
    width: 100%;
    margin-top: 7rem;
    text-align: center;

    --gap: 6rem;
}

.about-me-title p{
    margin-top: 0.5rem;
}

.about-me .numbered-data p{
    margin: 0;
    line-height: 1.1;
}


.big-text{
    padding-inline: clamp(1.25rem, 7vw, 10rem);
    margin: 30rem 0;
    text-align: center; 
}


/*  galerija */

.gallery {
    display: grid;
    gap: 4rem;
    padding-inline: clamp(1.25rem, 7vw, 10rem);
  }

.category  {
    width: 75%;
    margin: 0 auto;
}

.category a{
    position:relative;
    display: block;
    filter:grayscale(100%);
    transition: filter 500ms ease-in-out;

}

.category:nth-child(odd) {
    margin-right: 0;
}

.category:nth-child(even) {
    margin-left: 0;
}

.category a::after {
    position: absolute;
    top: -1rem;
    right: -1rem;
    z-index: -1;
    width: 50%;
    aspect-ratio: 1;
    content: '';
    background-color: hsl(var(--clr-blue));
    opacity:var(--image-backdrop-opacity, 0.2);
    

    /* transform: translateX(2rem); */
}

.category a:hover {
    --image-backdrop-opacity: 1;
    
    filter:grayscale(0);

    /* transform: translateX(2rem); */
}


/* web steps */

.web-solutions {
    display: grid;
    gap: 6rem;
    padding-inline: clamp(1.25rem, 7vw, 10rem);
  }

.web-steps  {
    position: relative;
    width: 95%;
    padding: 2rem;
    padding-bottom: 2rem;
    margin: 0 auto;
    background-color: hsl(var(--clr-dark));
    border: 1px solid hsl(var(--clr-white));

    --gap:0.75rem
}

.web-steps::after  {
    position: absolute;
    top: -1.5rem;
    right: -1.5rem;
    z-index: -1;
    width: 100%;
    height: 100%;
    content: '';
    background-color: hsl(var(--clr-blue))

}


.step-title > span{
    /* height: 100%;
    padding: 1rem;
    border: 1px solid hsl(var(--clr-blue));
    border-radius:1.5rem; */
    align-self: center;
    opacity: 0.7;
}

.step-title > h3 {
    position: relative;
    margin: 0;
}

.step-title > h3::after {
    position: absolute;
    right: 0;
    bottom: -0.5rem;
    display: block;
    width: 50%;
    height: 1px;
    content: '';
    background-color: hsl(var(--clr-blue));
}

/* stylelint-disable-next-line no-descending-specificity */
.web-steps > p {
    padding-top: 1rem;
}
/* ... */

